# textEsitor

./: CMakeLists.txt  aboutdialog.cpp  aboutdialog.ui  codeeditor.cpp  codeeditor.h  finddialog.cpp  finddialog.h  finddialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  replacedialog.cpp  replacedialog.h  replacedialog.ui  resources.qrc
